# For_peleng

./: CMakeLists.txt  README.md  build_run.sh
include/: Event.h  EventGenerator.h  EventLogger.h  Logger.h  Pipe.h
src/: EventGenerator.cpp  EventLogger.cpp  Logger.cpp  Pipe.cpp  main.cpp
